Blender crashing when geometry nodes with a large animated image sequences are used #94738

Closed
opened 2022-01-08 14:17:00 +01:00 by Paul Häger · 17 comments

System Information
Operating system: Linux-5.15.12-artix1-1-x86_64-with-glibc2.33 64 Bits
Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.46

32GB Ram

Blender Version
Broken: version: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-16 23:26, hash: 34d424fd64

Short description of error
When using a large animated image sequence (2100 images for example) blender crashes for me somewhere after frame 2000 while playing.
Shorter sequences (<2000) dont seem to cause any crash.

Tested both on RC and stable builds. Seems to be also happening on windows builds.

Exact steps for others to reproduce the error

I have not yet found a way to consistently reproduce this. Sometimes it manages to go through all 6519 Frames, and sometimes
it crashes. The frame count has been > 3000 at the time of the crashes at least. Once crash occured when image was rendered during playback

music test.crash.txt
#94738.crash.txt
music test.blend

I removed any frames after 2100 from this file but the original sequence had ~6800 Frames, so if you need a larger sequence for testing I can provide that too.

**System Information** Operating system: Linux-5.15.12-artix1-1-x86_64-with-glibc2.33 64 Bits Graphics card: NVIDIA GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 495.46 32GB Ram **Blender Version** Broken: version: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-16 23:26, hash: `34d424fd64` **Short description of error** When using a large animated image sequence (2100 images for example) blender crashes for me somewhere after frame 2000 while playing. Shorter sequences (<2000) dont seem to cause any crash. Tested both on RC and stable builds. Seems to be also happening on windows builds. **Exact steps for others to reproduce the error** I have not yet found a way to consistently reproduce this. Sometimes it manages to go through all 6519 Frames, and sometimes it crashes. The frame count has been > 3000 at the time of the crashes at least. Once crash occured when image was rendered during playback [music test.crash.txt](https://archive.blender.org/developer/F12799170/music_test.crash.txt) [#94738.crash.txt](https://archive.blender.org/developer/F12811861/T94738.crash.txt) [music test.blend](https://archive.blender.org/developer/F12795968/music_test.blend) I removed any frames after 2100 from this file but the original sequence had ~6800 Frames, so if you need a larger sequence for testing I can provide that too.
Author

Added subscriber: @PaulHaeger

Added subscriber: @PaulHaeger

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Could you provide the sequence of images used?
Apparently the packing of movies and image sequences in the .blend file is not supported. So the file is missing the images.

Could you provide the sequence of images used? Apparently the packing of movies and image sequences in the .blend file is not supported. So the file is missing the images.

Added subscriber: @deadpin

Added subscriber: @deadpin

From the crash file it looks like it's another duplicate of #92740/T94266 and the fix will go out in 3.0.1 if/when that release is decided.

Note: As of right now, none of the fixes that are being considered have been checked into the 3.0.1 build yet. In order to try out the fix, you'll have to grab a 3.1 build.

From the crash file it looks like it's another duplicate of #92740/T94266 and the fix will go out in 3.0.1 if/when that release is decided. Note: As of right now, none of the fixes that are being considered have been checked into the 3.0.1 build yet. In order to try out the fix, you'll have to grab a 3.1 build.
Author

In #94738#1285410, @mano-wii wrote:
Could you provide the sequence of images used?
Apparently the packing of movies and image sequences in the .blend file is not supported. So the file is missing the images.

Here are the images.

imgdata.tar.gz

In #94738#1285504, @deadpin wrote:
From the crash file it looks like it's another duplicate of #92740/T94266 and the fix will go out in 3.0.1 if/when that release is decided.

Note: As of right now, none of the fixes that are being considered have been checked into the 3.0.1 build yet. In order to try out the fix, you'll have to grab a 3.1 build.

I will later today test this in the 3.1 build, thanks for the info!

> In #94738#1285410, @mano-wii wrote: > Could you provide the sequence of images used? > Apparently the packing of movies and image sequences in the .blend file is not supported. So the file is missing the images. Here are the images. [imgdata.tar.gz](https://archive.blender.org/developer/F12798751/imgdata.tar.gz) > In #94738#1285504, @deadpin wrote: > From the crash file it looks like it's another duplicate of #92740/T94266 and the fix will go out in 3.0.1 if/when that release is decided. > > Note: As of right now, none of the fixes that are being considered have been checked into the 3.0.1 build yet. In order to try out the fix, you'll have to grab a 3.1 build. I will later today test this in the 3.1 build, thanks for the info!
Author

I have been testing the latest 3.1 Build. Seems a lot more stable and I can use a larger set of images.

However there have still been some sporadic crashes. I have not yet found a way to consistently reproduce this. Sometimes it manages to go through all 6519 Frames, and sometimes
it crashes. The frame count has been > 3000 at the time of the crashes at least. If this is related to this issue or not I dont know.

I attached the log of the last crash I had: music test.crash.txt

If I can find out more I will report it.

I have been testing the latest 3.1 Build. Seems a lot more stable and I can use a larger set of images. However there have still been some sporadic crashes. I have not yet found a way to consistently reproduce this. Sometimes it manages to go through all 6519 Frames, and sometimes it crashes. The frame count has been > 3000 at the time of the crashes at least. If this is related to this issue or not I dont know. I attached the log of the last crash I had: [music test.crash.txt](https://archive.blender.org/developer/F12799170/music_test.crash.txt) If I can find out more I will report it.

Added subscribers: @mont29, @Sergey, @iss

Added subscribers: @mont29, @Sergey, @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I was able to cause crash too, this happened when I hit render, but I was not able to reproduce this anymore. It is evident from my crash file, that I was fuzzing around. Also my trace is different than previous one so it's possible there are more causes. Will confirm even though this seems to be very hard to reproduce.

#94738.crash.txt

CC @Sergey, @mont29

Also note that I have reduced cache size limit to increase likelyhood of crash, but not quite sure if this did have any effect.

I was able to cause crash too, this happened when I hit render, but I was not able to reproduce this anymore. It is evident from my crash file, that I was fuzzing around. Also my trace is different than previous one so it's possible there are more causes. Will confirm even though this seems to be very hard to reproduce. [#94738.crash.txt](https://archive.blender.org/developer/F12811861/T94738.crash.txt) CC @Sergey, @mont29 Also note that I have reduced cache size limit to increase likelyhood of crash, but not quite sure if this did have any effect.

All tracebacks end up to the same point ( movie cache code, moviecache_valfree -> MEM_CacheLimiter_unmanage), so I think this is more for the #vfx_video module than #core really?

All tracebacks end up to the same point ( movie cache code, `moviecache_valfree -> MEM_CacheLimiter_unmanage`), so I think this is more for the #vfx_video module than #core really?

I was unable to reproduce the issue so far, but found an issue in the related area which got addressed in f4c8b4eb3e.
Took a while for all builds to get ready. Please give it a test again!

I was unable to reproduce the issue so far, but found an issue in the related area which got addressed in f4c8b4eb3e. Took a while for all builds to get ready. Please give it a test again!
Author

Will do!

Unfortunately I'm away for a few days so I can't test it until Wednesday at the soonest.

Will do! Unfortunately I'm away for a few days so I can't test it until Wednesday at the soonest.
Author

I tested the 9097c97767 Build since it was the closest to the commit f4c8b4eb3e.

I gave it some stress testing and Blender did not crash once. The issue seems fixed now, thank you very much.

I tested the 9097c97767 Build since it was the closest to the commit f4c8b4eb3e. I gave it some stress testing and Blender did not crash once. The issue seems fixed now, thank you very much.
Author

Im going to set this issue to resolved unless anything speaks against it.

Im going to set this issue to resolved unless anything speaks against it.
Author

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Thanks for the report and testing!

Thanks for the report and testing!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94738
No description provided.